CREATE SCHEMA "roadbuds";

CREATE TYPE "roadbuds"."request_status" AS ENUM (
  'Active',
  'Taken',
  'Withdrawn',
  'Timeout',
  'Resolved'
);

CREATE TYPE "roadbuds"."contact_type" AS ENUM (
  'whatsapp',
  'snapchat',
  'imessage',
  'telegram',
  'viber',
  'phone',
  'sms'
);

CREATE TABLE "roadbuds"."help_requests" (
  "id" integer PRIMARY KEY,
  "location" point,
  "submitted_time" timestamp NOT NULL,
  "closing_time" timestamp,
  "description" text,
  "assistance_type_id" integer NOT NULL,
  "author_id" integer,
  "status" roadbuds.request_status NOT NULL DEFAULT 'Active'
);

CREATE TABLE "roadbuds"."users" (
  "id" integer PRIMARY KEY,
  "name" varchar(64) NOT NULL,
  "surname" varchar(64),
  "nickname" varchar(32) UNIQUE NOT NULL,
  "email" varchar(120) UNIQUE NOT NULL,
  "phone" varchar(20) NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "password_hash" varchar(256) NOT NULL,
  "photo_url" varchar(256),
  "badges" json NOT NULL DEFAULT '{}'
);

CREATE TABLE "roadbuds"."help_offers" (
  "id" integer PRIMARY KEY,
  "request_id" integer NOT NULL,
  "helper_id" integer NOT NULL,
  "offered_time" timestamp NOT NULL,
  "message" text,
  "location" point
);

CREATE TABLE "roadbuds"."assistance_types" (
  "id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "name" varchar UNIQUE NOT NULL,
  "description" text,
  "recommendations_url" varchar(256)
);

CREATE TABLE "roadbuds"."reviews" (
  "id" integer PRIMARY KEY,
  "request_id" integer NOT NULL,
  "reviewer_id" integer NOT NULL,
  "rating" smallint NOT NULL DEFAULT 5,
  "comment" text,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "roadbuds"."notifications" (
  "id" integer PRIMARY KEY,
  "user_id" integer NOT NULL,
  "message" text NOT NULL,
  "is_read" boolean NOT NULL DEFAULT false,
  "created_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "roadbuds"."user_activity" (
  "user_id" integer PRIMARY KEY,
  "user_status" varchar(32) NOT NULL DEFAULT 'Active',
  "last_action_time" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "roadbuds"."settings" (
  "user_id" integer PRIMARY KEY,
  "notify_on_request" boolean NOT NULL DEFAULT true,
  "notify_on_offer" boolean NOT NULL DEFAULT true
);

CREATE TABLE "roadbuds"."user_contact_options" (
  "user_id" integer PRIMARY KEY,
  "contact_type" roadbuds.contact_type UNIQUE NOT NULL,
  "contact_value" varchar(120) NOT NULL,
  "is_preferred" boolean NOT NULL DEFAULT false
);

COMMENT ON TABLE "roadbuds"."help_requests" IS 'user requests of assistance';

COMMENT ON COLUMN "roadbuds"."reviews"."rating" IS 'Rating from 1 to 5';

COMMENT ON TABLE "roadbuds"."user_activity" IS 'tracks user activity status if they are looking for help or available to help';

COMMENT ON TABLE "roadbuds"."settings" IS 'user notification settings';

COMMENT ON TABLE "roadbuds"."user_contact_options" IS 'user emergency or trusted contacts';

ALTER TABLE "roadbuds"."help_requests" ADD FOREIGN KEY ("assistance_type_id") REFERENCES "roadbuds"."assistance_types" ("id");

ALTER TABLE "roadbuds"."help_requests" ADD FOREIGN KEY ("author_id") REFERENCES "roadbuds"."users" ("id");

ALTER TABLE "roadbuds"."help_offers" ADD FOREIGN KEY ("request_id") REFERENCES "roadbuds"."help_requests" ("id");

ALTER TABLE "roadbuds"."help_offers" ADD FOREIGN KEY ("helper_id") REFERENCES "roadbuds"."users" ("id");

ALTER TABLE "roadbuds"."reviews" ADD FOREIGN KEY ("request_id") REFERENCES "roadbuds"."help_requests" ("id");

ALTER TABLE "roadbuds"."reviews" ADD FOREIGN KEY ("reviewer_id") REFERENCES "roadbuds"."users" ("id");

ALTER TABLE "roadbuds"."notifications" ADD FOREIGN KEY ("user_id") REFERENCES "roadbuds"."users" ("id");

ALTER TABLE "roadbuds"."user_activity" ADD FOREIGN KEY ("user_id") REFERENCES "roadbuds"."users" ("id");

ALTER TABLE "roadbuds"."settings" ADD FOREIGN KEY ("user_id") REFERENCES "roadbuds"."users" ("id");

ALTER TABLE "roadbuds"."user_contact_options" ADD FOREIGN KEY ("user_id") REFERENCES "roadbuds"."users" ("id");
